--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="script.js"></script>
-  <link rel="stylesheet" href="styles.css">
-  <title>PuppyBowl</title>
-</head>
-<body>
-  <!-- form to add new players -->
-  <div id="new-player-form"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--<script defer src="script.js"></script>-->
+    <link rel="stylesheet" href="styles.css" />
+    <title>PuppyBowl</title>
+  </head>
+  <body>
 
-  <!-- container for all players -->
-  <div id="all-players-container"></div>
+<div id="header">
+  <h1>Puppy Bowl MMXXIII</h1>
 
-  <!-- import JavaScript -->
-  <script src="./script.js"></script>
-</body>
+</div>
+    <!-- form to add new players -->
+    <div id="new-player-form"></div>
+
+    <!-- container for all players -->
+    <div id="all-players-container"></div>
+
+    <!-- import JavaScript -->
+    <script src="script.js"></script>
+  </body>
 </html>
