--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <title>PuppyBowl</title>
   </head>
@@ -18,6 +19,6 @@
     <div id="all-players-container"></div>
 
     <!-- import JavaScript -->
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
